[package]
name = "tt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestore = "0.35.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
